# ApacheKakfa-Demo

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: router.py
api/routes/: bands.py
core/: config.py
db/tables/: transactions.py
schemas/: transactions.py
