[tool.poetry]
name = "apachekafka-demo"
version = "0.1.0"
description = ""
authors = ["Arshid Aslam <arshidbaba93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
sqlmodel = "^0.0.16"
SQLAlchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
